--- a/src/i18n/src/ru.yml
+++ b/src/i18n/src/ru.yml
@@ -39,8 +39,8 @@ common:
       prompt: ${hostname} хочет перейти в полнноэкранный режим
     popups:
       name: Всплывающие окна
-      desc: Позволяет открывать всплывающие окна
-      prompt: Сайт ${hostname} хочет открыть окно
+      desc: Позволяет открывать всплывающие окна без вашего взаимодействия
+      prompt: Сайт ${hostname} хочет открывать окна без вашего взаимодействия
     media.video:
       name: Доступ к камере
       desc: Позволяет записывать видео с камеры
@@ -60,7 +60,7 @@ common:
     DRM:
       name: DRM
       desc: Позволяет проигрывать контент, защищенный Digital Rights Management
-      prompt: ${hostname} хочет проигрывать DRM-защищенный контетн
+      prompt: ${hostname} хочет проигрывать DRM-защищенный контент
     notifications:
       name: Уведомления
       desc: Позволяет показывать уведомления
@@ -71,8 +71,10 @@ common:
       prompt: ${hostname} хочет использовать MIDI устройства
     pointerLock:
       name: Контроль курсора
-      desc: Позволяет контролировать ваш курсор мыши
-      prompt: ${hostname} хочет контролировать ваш курсор мыши
+      desc: Позволяет зафиксировать ваш курсор мыши (нажмите Esc, чтобы вернуть
+        контроль)
+      prompt: ${hostname} хочет зафиксировать ваш курсор мыши (нажмите Esc, чтобы
+        вернуть контроль)
     openExternal:
       name: Открытие сторонних приложений
       desc: Позволяет открывать сторонние приложения. Если вы разрешите это, сайт
@@ -84,8 +86,8 @@ common:
       prompt: ${hostname} хочет знать, если вы не используете устройство
     screenWakeLock:
       name: Отмена блокировки экрана
-      desc: Позволяет предотвращать автоматическую блокировку экрана
-      prompt: ${hostname} хочет уметь предотвращать блокировку экрана
+      desc: Позволяет предотвращать автоматический переход в спящий режим
+      prompt: ${hostname} хочет предотвратить автоматический переход в спящий режим
 navigation:
   back: Назад
   forward: Вперед
@@ -96,7 +98,7 @@ ui:
     confirm: Подтвердите ваше действие на ${site}
     prompt: Совершите ввод на ${site}
     permission:
-      alt: Разрешение ${name}
+      alt: Разрешение "${name}"
       appIcon: Иконка приложения ${app}
   tools:
     load-stop: Остановить загрузку
@@ -143,7 +145,7 @@ ui:
     button-viewCertificate: Посмотреть сертификат
     button-cookieFiles: Файлы куки
     button-siteSettings: Настройки сайта...
-    permissions: Разрешения ${site}
+    permissions: Разрешения сайта ${site}
   zoom:
     altMessage: Масштаб страницы - ${zoom}%
     infoMessage: "Масштаб: ${zoom}%"
@@ -189,7 +191,7 @@ ui:
     status-good: Реклама и трекеры заблокированы
     status-bad: Реклама и трекеры не заблокированы
     status-neutral: Рекламы или трекеров не обнаружено
-    blockedAmount: "Заблокировано трекеров: ${count}"
+    blockedAmount: "Заблокировано: ${count}"
     list: Список трекеров
     switch-off: Выключить блокировку на ${hostname}
     switch-on: Включить блокировку на ${hostname}
@@ -228,7 +230,7 @@ windows:
       domain: Домен
       hostOnly: Только на этом хосте
       path: Путь
-      secure: Защищенный
+      secure: Защищен
       httpOnly: Только HTTP
       session: Сессионный куки
       expirationDate: Истекает
@@ -293,7 +295,7 @@ net-error:
       - Что-то пошло не так на вашем устройстве.
     connection:
       - Произошла неизвестная ошибка подключения
-      - Не удалось подключиться к серверу
+      - Не удалось подключиться к серверу.
     certificate:
       - Ошибка сертификата
       - Мы не доверяем сертификату сайта <b>${host}</b>.
@@ -312,11 +314,11 @@ net-error:
     - >
       Вот, что вы можете сделать:<br>
 
-      <ul><li>Проверьте, есть ли опечатка в имени хоста <b>"${hostname}"</b>.</li>
+      <ul><li>Проверьте, есть ли опечатка в имени хоста <b>"${hostname}"</b></li>
 
       <li>Запустите диагностику сети</li>
 
-      <li>Поменяйте настройки DNS over HTTPS</li>
+      <li>Поменяйте настройки DNS over HTTPS.</li>
   noFileAccess:
     - Мы не можем получить доступ к этому файлу
     - Возможно, файл по адресу '<b>${path}</b>' был перемещен или удален.
@@ -331,10 +333,10 @@ net-error:
     - Файл по адресу '<b>${path}</b>' заражен вирусом. Рекомендуется его удалить.
   requestBlocked:
     - Запрос был заблокирован
-    - Возможно, расширение заблокировало запрос
+    - Возможно, расширение или блокировщик рекламы заблокировали запрос.
   netChange:
     - Сеть изменилась.
-    - Возможно, вы подключились к другой сети
+    - Возможно, вы подключились к другой сети.
   blockedByResponse:
     - Эта страница не позволила себя так отобразить.
     - Сервер отправил запрос, предотвращающий показ этой страницы, к примеру, на
@@ -367,8 +369,8 @@ net-error:
     - Некорректный IP адрес.
     - Попробуйте очистить ваш DNS кэш.
   unreachableIP:
-    - Не получилось получить доступ к IP адресу.
-    - Это все, что нам известно
+    - Не получилось получить доступ к этому IP адресу.
+    - Это все, что нам известно.
   noHTTPS:
     - Этот сайт не может обеспечить защищенное подключение.
     - Возможно, версия SSL клиента и сервера не совпадают. Также возможно, что
@@ -408,7 +410,7 @@ menu:
     close: Закрыть панели
     switch: Поменять панели местами
     pinFocused: Закрепить активную панель
-  devTools: Developer tools
+  devTools: Инструменты разработчика
   taskManager: Диспетчер задач
   currentTab: Эта вкладка
   recentlyClosedTabs: Недавно закрытые
@@ -467,7 +469,7 @@ menu:
       saving:
         dialog: Сохранить картинку
         error-title: Ошибка
-        error-notAnImage: Это не картинка.
+        error-notAnImage: Сервер отправил не картинку.
         error-alreadyExists: Файл с таким именем уже существует.
     media:
       play: Воспроизвести
@@ -530,7 +532,7 @@ pages:
       system: Системная
     TOS:
       title: Условия использования
-      note: Прочитайте это внимательно. Это, оказывается, на самом деле важно.
+      note: Прочитайте это внимательно. Это, оказывается, правда важно.
       button-decline: Отклонить
       button-accept: Принять
     final:
@@ -585,7 +587,7 @@ pages:
             permissions-desc: Настройки разрешений по умолчанию
           sites:
             title: Сайты
-            more: Ещё...
+            search: Поиск по сайтам
             withPermissions: Сайты с разрешениями
             reset: Сбросить все разрешения этого сайта
           sitePage:
@@ -595,7 +597,7 @@ pages:
             title: Разрешения по умолчанию
       denyCrossOriginPermissions:
         title: Запрещать межсайтовые разрешения
-        description: Встроенные страницы не смогут запрашивать разрешения
+        description: Встроенные страницы не смогут запрашивать разрешения.
       adblocker:
         title: Блокировщик рекламы
         description: Блокировщик рекламы блокирует известные трекеры и рекламу на всех
@@ -679,7 +681,7 @@ pages:
       title: Очистить историю браузера
       clear-button: Очистить
       clearOnThisPage-button: Очистить всё на этой странице
-      timePeriod: Или очистить за
+      timePeriod: "Или очистить за:"
       option-hour: Последний час
       option-day: Последние 24 часа
       option-week: Последнюю неделю
